@startuml
left to right direction
skinparam monochrome true
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam defaultFontName "Times New Roman"
skinparam defaultFontSize 12
skinparam classFontSize 11
skinparam ArrowThickness 1.3
skinparam dpi 150
skinparam nodesep 8
skinparam ranksep 10
hide empty members
scale 1.15

package "Подсистема звука" {
  class AudioCue {
    +clips: AudioClip[]
    +volume: float
    +pitchMin: float
    +pitchMax: float
  }

  class AudioService {
    +PlayAt(cue: AudioCue, pos: Vector3, vol: float)
    +GetMasterVolume(category: AudioCategory): float
  }

  class AmbientAudioEmitter {
    +ApplyRuntimeVolume()
  }
}

AudioService --> AudioCue : параметры клипа
AmbientAudioEmitter --> AudioService : фон

@enduml
